# crosswords

./: .gitignore  README.md  log_baseline_gpt-oss_v1_s0.txt  log_baseline_gpt-oss_v1_s1.txt  log_baseline_gpt-oss_v1_s2.txt  log_baseline_gpt-oss_v1_s3.txt  log_baseline_gpt-oss_v1_s4.txt  log_baseline_gpt-oss_v2_s0.txt  log_baseline_gpt-oss_v2_s1.txt  log_baseline_gpt-oss_v2_s2.txt  log_baseline_gpt-oss_v2_s3.txt  log_baseline_gpt-oss_v3_s0.txt  log_baseline_gpt-oss_v3_s1.txt  log_baseline_gpt-oss_v3_s2.txt  log_baseline_gpt-oss_v3_s3.txt  log_baseline_gpt-oss_v3_s4.txt  log_baseline_granite_v1_s0.txt  log_baseline_granite_v1_s1.txt  log_baseline_granite_v1_s2.txt  log_baseline_granite_v1_s3.txt  log_baseline_granite_v2_s0.txt  log_baseline_granite_v2_s1.txt  log_baseline_granite_v2_s2.txt  log_baseline_granite_v2_s3.txt  log_baseline_granite_v3_s0.txt  log_baseline_granite_v3_s1.txt  log_baseline_granite_v3_s2.txt  log_baseline_granite_v3_s3.txt  log_baseline_granite_v3_s4.txt  log_baseline_llama_v1_s0.txt  log_baseline_llama_v1_s1.txt  log_baseline_llama_v1_s2.txt  log_baseline_llama_v1_s3.txt  log_baseline_llama_v2_s0.txt  log_baseline_llama_v2_s1.txt  log_baseline_llama_v2_s2.txt  log_baseline_llama_v2_s3.txt  log_baseline_llama_v3_s0.txt  log_baseline_llama_v3_s1.txt  log_baseline_llama_v3_s2.txt  (+28 more)
data/: extracted_data_output.csv  out_gpt-oss_v1_0.json  out_gpt-oss_v1_0_output.csv  out_gpt-oss_v2_0.json  out_gpt-oss_v2_0_output.csv  out_gpt-oss_v3_1.json  out_gpt-oss_v3_1_output.csv  out_gpt-oss_v3_2.json  out_gpt-oss_v3_2_output.csv  out_gpt-oss_v3_3.json  out_gpt-oss_v3_3_output.csv  out_gpt-oss_v3_4.json  out_gpt-oss_v3_4_output.csv  out_granite_v1_0.json  out_granite_v1_0_output.csv  out_granite_v2_0.json  out_granite_v2_0_output.csv  out_granite_v3_4.json  out_granite_v3_4_output.csv  out_granite_v3_4_output_annotated.csv  (+14 more)
(+398 files in other folders)
